--- a/cryptocurrency/docker-compose.yaml
+++ b/cryptocurrency/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   timescaledb:
-    image: timescale/timescaledb:latest-pg15
+    image: timescale/timescaledb-ha:pg15-latest
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
